force-app/main/default/objects/HRCSVC_Contact_Certification__c/HRCSVC_Contact_Certification__c.object-meta.xml
<CustomObject>
    <description>245</description>
    <label>Contact Certification</label>
    <nameField>
        <label>Contact Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>