force-app/main/default/objects/HRCSVC_Contact_Certification__c/fields/HRCSVC_Certification_Expiration__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Certification_Expiration__c</fullName>
    <description>SE-245</description>
    <label>Certification Expiration</label>
    <type>Date</type>
</CustomField>