force-app/main/default/objects/HRCSVC_Contact_Certification__c/fields/HRCSVC_Contact__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Contact__c</fullName>
    <description>SE-245</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Certifications</relationshipLabel>
    <relationshipName>Contact_Certifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>