force-app/main/default/objects/HRCSVC_Contact_Certification__c/fields/HRCSVC_Device_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Device_Type__c</fullName>
    <description>SE-245</description>
    <label>Device Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>